--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ h1 {
   font-size: 4em;
   letter-spacing: 2px;
 }
+h2 {
+  margin: 10px;
+  padding: 10px;
+}
 button {
   margin: 0 10px;
   background: transparent;
@@ -30,4 +34,18 @@ button:hover {
 }
 .content {
   text-align: left;
+}
+.card {
+  padding: 8px 16px;
+  background: #1b1b1b;
+  margin: 16px;
+  border-radius: 20px;
+}
+.card p {
+  margin: 6px 0;
+  color: #ffff57;
+}
+.card h3 {
+  margin: 10px 0;
+  color: #ffff57;
 }
